--- a/asp.net core MVC.csproj
+++ b/asp.net core MVC.csproj
@@ -5,4 +5,9 @@
     <RootNamespace>asp.net_core_MVC</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+  </ItemGroup>
+
 </Project>
